<resources>
    <string name="app_name">Lunark</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="welcome_to_lunark">Lunark</string>
    <string name="i_am_a_guest">I am a guest</string>
    <string name="i_am_a_host">I am a host</string>
    <string name="title_activity_account_screen">AccountScreen</string>
    <string name="header_your_profile">Your Profile</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="book">Book</string>
    <string name="view_reviews">View reviews</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_guests">Number of guests</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="hero">Hero</string>
    <string name="star_icon">Star icon</string>
    <string name="property_image">Property image</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="starting_price">Starting price</string>
    <string name="end_price">End price</string>
    <string name="choose_date">Choose date</string>
    <string name="stove">Stove</string>
    <string name="washing_machine">Washing machine</string>
    <string name="amenities">Amenities</string>
    <string name="not_connected_to_the_internet">Not connected to the Internet</string>
    <string name="failed_to_connect_to_the_internet">Failed to connect to the internet</string>
    <string name="connect_to_wifi_or_mobile_data_or_quit">Connect to wifi or mobile data or quit</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="connect_to_mobile_data">Connect to mobile data</string>
    <string name="quit">Quit</string>
    <string name="wrong_username_or_password">Wrong username or password.</string>

    <string name="entered_data_is_not_valid">Entered data is not valid</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="signed_up_successfully_check_your_email_for_a_verification_link">Signed up successfully, check your email for a verification link.</string>
    <string-array name="property_types_array">
        <item>All</item>
        <item>Whole house</item>
        <item>Room</item>
        <item>Shared room</item>
    </string-array>
    <string name="no_ratings">No ratings</string>
    <string name="minimum_guests">Minimum guests: </string>
    <string name="maximum_guests">Maximum guests: </string>
    <string name="none">None</string>
    <string name="title_activity_host_reservation_screen">HostReservationScreenActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="room">Room</string>
    <string name="choose_dates">Choose dates</string>
    <string name="price">Price</string>
    <string name="some_fields_are_not_filled_or_are_filled_incorrectly">Some fields are not filled or are filled incorrectly</string>
    <string name="property_availability_can_not_be_set_changed_for_dates_in_the_past">Property availability can not be set/changed for dates in the past</string>
    <string name="select_dates_and_add_price_before_adding_availability">Select dates and add price before adding availability</string>
    <string name="the_entered_price_is_invalid">The entered price is invalid</string>
    <string name="please_choose_the_start_and_end_dates">Please choose the start and end dates</string>
    <string name="please_input_a_price">Please input a price</string>
    <string name="property_created_successfully">Property created successfully</string>
    <string name="something_went_wrong_while_adding_your_property">Something went wrong while adding your property</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="reservations">Reservations</string>
    <string name="account">Account</string>
    <string name="main">Main</string>
    <string name="new_property">New Property</string>
    <string name="my_properties">My Properties</string>
    <string name="unapproved_reservations">Unapproved Reservations</string>
    <string name="reports">Reports</string>
    <string name="unapproved_properties">Unapproved Properties</string>
    <string name="comments_grades">Comments/Grades</string>
    <string name="filter_properties">Filter Properties</string>
    <string name="user_management">User Management</string>
    <string name="total_profit">Total profit:</string>
    <string name="total_reservation_count">Total reservation count:</string>
    <string name="get_report">Get report</string>
    <string name="invalid_date_format">Invalid date format - should be yyyy/MM/dd</string>
    <string name="year">Year</string>
    <string name="invalid_year">Invalid year - should be yyyy</string>
    <string name="write_a_review">Write a review</string>
    <string name="write_review">Write review</string>
    <string name="review">Review</string>
    <string name="comment">Comment</string>
    <string name="rate_your_stay">Rate your stay</string>
    <string name="submit">Submit</string>
    <string name="review_submitted_successfully">Review submitted successfully</string>
    <string name="one_of_the_fields_was_not_filled_properly">One of the fields was not filled properly.</string>
    <string name="hosted_by">Hosted by</string>
    <string name="average_rating">Average rating</string>
    <string name="reason_for_reporting">Reason for reporting</string>
    <string name="please_tell_us_how_this_user_broke_the_rules_of_the_platform">Please tell us how this user broke the rules of the platform</string>
    <string name="report_host">Report host</string>
    <string name="report_submitted_successfully">Report submitted successfully</string>
    <string name="report_guest">Report guest</string>
    <string name="image_of_a_calendar">Image of a calendar.</string>
    <string name="report">Report</string>
    <string name="review_reported_successfully">Review reported successfully</string>
    <string name="you_have_already_reported_this_review">You have already reported this review</string>
    <string name="shake_detected_sorting_properties">Shake detected! Sorting properties…</string>
</resources>

