<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    <variable
        name="viewmodel"
        type="com.example.lunark.viewmodels.AccountReportViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:text="@string/report_host"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/please_tell_us_how_this_user_broke_the_rules_of_the_platform"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="24dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:text="@={viewmodel.reason}"
            android:hint="@string/reason_for_reporting" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit" />
    </LinearLayout>
</layout>