<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.WriteReviewFragment"
    >

    <data>
    <variable
        name="viewmodel"
        type="com.example.lunark.viewmodels.ReviewViewModel" />

        <import type="com.example.lunark.util.FloatToIntegerConverter" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:text="@string/write_review"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:text="@string/rate_your_stay"></TextView>

        <RatingBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:numStars="5"
            android:rating="@={FloatToIntegerConverter.IntegerToFloat(viewmodel.rating)}"
            android:isIndicator="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="24dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:text="@={viewmodel.comment}"
            android:hint="@string/comment" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit" />


    </LinearLayout>
</layout>