<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GeneralReportFragment">

    <EditText
        android:id="@+id/et_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="date"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/et_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        app:layout_constraintStart_toEndOf="@id/et_start_date"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="date"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/btn_get_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/total_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_start_date"
        android:text="@string/total_profit"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/total_profit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/total_profit"
        app:layout_constraintTop_toBottomOf="@id/et_start_date" />

    <TextView
        android:id="@+id/total_reservation_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_profit"
        android:text="@string/total_reservation_count"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/total_reservation_count_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/total_reservation_count"
        app:layout_constraintTop_toBottomOf="@id/total_profit_value" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_reservation_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>