<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.PropertyDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/thumbnail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/property_image"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bayon"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/thumbnail"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/favoriteCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/favoriteCheckbox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:textColor="?colorPrimary"/>

        <ImageView
            android:id="@+id/starIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location"
            android:layout_margin="10dp"
            android:src="@drawable/ic_star" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintStart_toEndOf="@id/starIcon"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/bookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bookButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/minGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/minimum_guests"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/minGuestsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toEndOf="@id/minGuests"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/maxGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/minGuests"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/maximum_guests"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/maxGuestsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/minGuests"
            app:layout_constraintStart_toEndOf="@id/maxGuests"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/amenities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/maxGuestsValue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:text="@string/amenities"/>

        <LinearLayout
            android:id="@+id/amenitiesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/amenities"
            app:layout_constraintTop_toBottomOf="@id/amenities"
            android:layout_marginStart="10dp">
        </LinearLayout>

        <org.osmdroid.views.MapView
            android:id="@+id/osmmap"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/amenitiesList"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"/>

        <Button
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/osmmap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginLeft="10dp"
            android:id="@+id/write_review_button"
            android:text="@string/write_a_review"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/write_review_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_margin="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
