<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BookingRequestFragment">

    <TextView
        android:id="@+id/tv_property_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:fontFamily="@font/bayon"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:text="Property name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_guest_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_property_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_guest_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_guests"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:drawableEnd="@drawable/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/layout_guest_number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:text="@string/book"/>

</androidx.constraintlayout.widget.ConstraintLayout>
